erDiagram
    user ||--o{ session : "has"
    user ||--o{ account : "has"
    user ||--o| session : "impersonates"
    user ||--o{ hunts : "organizes"
    user ||--o{ hunt_participations : "joins"
    hunts ||--o{ hunt_points : "has"
    hunts ||--o| hunt_rewards : "has"
    hunts ||--o{ hunt_participations : "has"
    hunt_points ||--o| quiz_questions : "has"
    hunt_points ||--o{ hunt_point_completions : "completed via"
    hunt_participations ||--o{ hunt_point_completions : "has"

    user {
        string id PK
        string name
        string email
        boolean emailVerified
        string image
        string bio
        string role
        boolean banned
        string banReason
        bigint banExpires
        timestamp createdAt
        timestamp updatedAt
    }

    session {
        string id PK
        timestamp expiresAt
        string token
        timestamp createdAt
        timestamp updatedAt
        string ipAddress
        string userAgent
        string userId FK
        string impersonatedBy FK
    }

    account {
        string id PK
        string accountId
        string providerId
        string userId FK
        string accessToken
        string refreshToken
        string idToken
        timestamp accessTokenExpiresAt
        timestamp refreshTokenExpiresAt
        string scope
        string password
        timestamp createdAt
        timestamp updatedAt
    }

    verification {
        string id PK
        string identifier
        string value
        timestamp expiresAt
        timestamp createdAt
        timestamp updatedAt
    }

    hunts {
        string id PK
        string title
        string description
        hunt_status status
        string organizerId FK
        timestamp createdAt
        timestamp updatedAt
    }

    hunt_points {
        string id PK
        string huntId FK
        float8 latitude
        float8 longitude
        integer position
        string gameType
        string arId
        timestamp createdAt
    }

    hunt_rewards {
        string id PK
        string huntId FK
        integer topX
        string promoCode
    }

    quiz_questions {
        string id PK
        string huntPointId FK
        string question
        jsonb answers
        integer correctAnswerIndex
    }

    hunt_participations {
        string id PK
        string huntId FK
        string userId FK
        timestamp joinedAt
    }

    hunt_point_completions {
        string id PK
        string huntParticipationId FK
        string huntPointId FK
        integer score
        timestamp completedAt
    }
